maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:12: error: missing argument list for method && in class Boolean
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `$amp$amp _` or `$amp$amp(_)` instead of `$amp$amp`.
      if (estFaceMur == false && a = 0) {
                              ^RandomMouseMaze:14: error: type mismatch;
 found   : Unit
 required: Boolean
      } else if (a = 1) {
                   ^